@@ -9,6 +9,7 @@ SUBDIRS= \
 	buildfiles/raw-identify.pro \
 	buildfiles/simple_dcraw.pro \
 	buildfiles/multirender_test.pro \
+	buildfiles/postprocessing_benchmark.pro \
 	buildfiles/unprocessed_raw.pro \
 	buildfiles/4channels.pro  \
 
