@@ -39,7 +39,7 @@ sources: ${DCRAW_GEN} Makefile.devel ${PP}
 library: lib/libraw.a lib/libraw_r.a
 
 all_samples: bin/raw-identify bin/simple_dcraw  bin/dcraw_emu bin/dcraw_half bin/half_mt bin/mem_image \
-        bin/unprocessed_raw bin/4channels bin/multirender_test
+        bin/unprocessed_raw bin/4channels bin/multirender_test bin/postprocessing_benchmark
 
 ## Demosaic Pack(s)
 
@@ -59,6 +59,9 @@ bin/simple_dcraw: lib/libraw.a samples/simple_dcraw.cpp
 
 bin/multirender_test: lib/libraw.a samples/multirender_test.cpp
 	$(CXX) -DLIBRAW_NOTHREADS ${LCMS_DEF} ${CFLAGS} -o bin/multirender_test samples/multirender_test.cpp -L./lib -lraw  -lm  ${LCMS_LIB}
+
+bin/postprocessing_benchmark: lib/libraw.a samples/postprocessing_benchmark.cpp
+	$(CXX) -DLIBRAW_NOTHREADS ${LCMS_DEF} ${CFLAGS} -o bin/postprocessing_benchmark samples/postprocessing_benchmark.cpp -L./lib -lraw  -lm  ${LCMS_LIB}
 
 bin/unprocessed_raw: lib/libraw.a samples/unprocessed_raw.cpp
 	$(CXX) -DLIBRAW_NOTHREADS ${LCMS_DEF} ${CFLAGS} -o bin/unprocessed_raw samples/unprocessed_raw.cpp -L./lib -lraw  -lm  ${LCMS_LIB}
