@@ -28,7 +28,7 @@ DCRAW_LIB_MT_OBJECTS=object/dcraw_common_mt.o object/libraw_cxx_mt.o object/libr
 library: lib/libraw.a lib/libraw_r.a
 
 all_samples: bin/raw-identify bin/simple_dcraw  bin/dcraw_emu bin/dcraw_half bin/half_mt bin/mem_image \
-             bin/unprocessed_raw bin/4channels bin/multirender_test
+             bin/unprocessed_raw bin/4channels bin/multirender_test bin/postprocessing_benchmark
 
 install: library
 	@if [ -d /usr/local/include ] ; then cp -R libraw /usr/local/include/ ; else echo 'no /usr/local/include' ; fi
@@ -54,6 +54,9 @@ bin/simple_dcraw: lib/libraw.a samples/simple_dcraw.cpp
 
 bin/multirender_test: lib/libraw.a samples/multirender_test.cpp
 	g++ -DLIBRAW_NOTHREADS ${LCMS_DEF}  ${CFLAGS} -o bin/multirender_test samples/multirender_test.cpp -L./lib -lraw  -lm  ${LCMS_LIB}
+
+bin/postprocessing_benchmark: lib/libraw.a samples/postprocessing_benchmark.cpp
+	g++ -DLIBRAW_NOTHREADS ${LCMS_DEF}  ${CFLAGS} -o bin/postprocessing_benchmark samples/postprocessing_benchmark.cpp -L./lib -lraw  -lm  ${LCMS_LIB}
 
 bin/mem_image: lib/libraw.a samples/mem_image.cpp
 	g++ -DLIBRAW_NOTHREADS ${LCMS_DEF} ${CFLAGS} -o bin/mem_image samples/mem_image.cpp -L./lib -lraw  -lm  ${LCMS_LIB}
