@@ -1,7 +1,7 @@
 /* -*- C++ -*-
  * File: halt_mt_win32.c
- * Copyright 2008-2010 LibRaw LLC (info@libraw.org)
- * Created: Sat Mar  8 , 2008
+ * Copyright 2008-2011 LibRaw LLC (info@libraw.org)
+ * Created: Sat Mar  8, 2008
  *
  * LibRaw  C API mutithreaded sample:  emulates call to "dcraw  -h [-w] [-a] [-v]"
  * Win32 version
