@@ -1,7 +1,7 @@
 /* -*- C++ -*-
  * File: simple_dcraw.cpp
- * Copyright 2008-2010 LibRaw LLC (info@libraw.org)
- * Created: Sat Mar  8 , 2008
+ * Copyright 2008-2011 LibRaw LLC (info@libraw.org)
+ * Created: Sat Mar  8, 2008
  *
  * LibRaw simple C++ API:  emulates call to "dcraw  [-D]  [-T] [-v] [-e] [-4]"
 
